Attempt to fix focus trap on mobile

--- a/css/global.css
+++ b/css/global.css
@@ -2294,6 +2294,14 @@ Usage: codyhouse.co/license
   display: none;
 }
 
+.sub-menu {
+  visibility: hidden;
+}
+
+.sub-menu.toggled-on {
+  visibility: visible;
+}
+
 .nav-container {
   background-color: transparent;
   position: absolute;
